# clark

./: Lib.hs  Main.hs  cabal.project.freeze  clark.cabal
app/: Lib.hs  Main.hs
