cabal-version:      3.0
name:               clark
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             George Thomas
maintainer:         georgefsthomas@gmail.com

executable clark
    main-is: Main.hs
    other-modules: Lib
    build-depends:
        base >= 4.14,
        mtl ^>= 2.2.2,
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:
        -Wall
